--- a/argocd-apps/traefik-application.yaml
+++ b/argocd-apps/traefik-application.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sealed-secrets
-  namespace: argocd
+  name: traefik
+  namespace: traefik
 spec:
   project: default
   source: 
