--- a/argocd-apps/cronworkflow.yaml
+++ b/argocd-apps/cronworkflow.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: CronWorkflow
 metadata:
   name: cron-workflow
-  namespace: argo
+  namespace: argocd
 spec:
   schedule: "*/5 * * * *"
   concurrencyPolicy: "Forbid"
