add argocd destination for argo namespace

--- a/argocd-install/values-override.yaml
+++ b/argocd-install/values-override.yaml
@@ -60,6 +60,8 @@ server:
     destinations:
     - namespace: argocd
       server: https://kubernetes.default.svc
+    - namespace: argo
+      server: https://kubernetes.default.svc
     clusterResourceWhitelist:
     - group: '*'
       kind: '*'
