update image to alpine/curl

--- a/argocd-apps/cronworkflow.yaml
+++ b/argocd-apps/cronworkflow.yaml
@@ -28,7 +28,7 @@ spec:
         - name: external-url
         - name: protocol
       script:
-        image: alpine:3.6
+        image: alpine/curl:3.14
         command: ["sh"]
         source: |
           echo "Executing curl...";
