create configmap in argo namespace

--- a/argocd-apps/configmap.yaml
+++ b/argocd-apps/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata: 
   name: script-configmap
-  namespace: 
+  namespace: argo 
 data:
   script-one.sh: |
     echo "script-one.sh"
