test alpine k8s image

--- a/argocd-apps/configmap.yaml
+++ b/argocd-apps/configmap.yaml
@@ -4,13 +4,6 @@ metadata:
   name: script-configmap
   namespace: argo 
 data:
-  script-one.sh: |
-    echo "script-one.sh"
-    date
-    sleep 1
-    echo "run /tmp/script-2.sh now"
-    /tmp/script-2.sh
-  script-2.sh: |
-    echo "script-2.sh"
-    sleep 1
-    date
+  get-cluster-info.sh: |
+    echo "Retrieving cluster info...";
+    kubectl get namespaces;
