use non-default service account

--- a/argocd-apps/cronworkflow.yaml
+++ b/argocd-apps/cronworkflow.yaml
@@ -8,6 +8,7 @@ spec:
   concurrencyPolicy: "Forbid"
   startingDeadlineSeconds: 0
   workflowSpec:
+    serviceAccountName: argo
     entrypoint: execute-workflow
     templates:
     - name: execute-workflow
