list containers that aren't ready

--- a/argocd-apps/configmap.yaml
+++ b/argocd-apps/configmap.yaml
@@ -5,5 +5,7 @@ metadata:
   namespace: argo 
 data:
   get-cluster-info.sh: |
-    echo "Retrieving cluster info...";
-    kubectl get namespaces;
+    echo "Retrieving cluster info!";
+    echo "Listing non-Ready containers...";
+    kubectl --all-namespaces get pods -o jsonpath='{range .items[*]}{.status.containerStatuses[*].ready.false}{.metadata.name}{ "\n"}{end}';
+    
